<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/address"/>

        <EditText
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:hint="@string/address_hint"
                android:id="@+id/address"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/port"/>

        <EditText
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:hint="@string/port_hint"
                android:inputType="number"
                android:id="@+id/port"/>

    </LinearLayout>

    <GridView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gridView"
            android:layout_weight="1"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >

        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/connect"
                android:id="@+id/connect"
                />

    </LinearLayout>

</LinearLayout>